--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main class="container">
         <section id="balance">
-            <h2>Balanço</h2>
+            <h2 class="sr-only">Balanço</h2>
             <div class="card">
                 <h3>
                     <span>Entradas</span>
@@ -39,13 +39,15 @@
             </div>
         </section>
         <section id="transaction">
-            <h2>Transações</h2>
+            <h2 class="sr-only">Transações</h2>
+            <button class="new" onclick="Modal.open()">+ Nova Transação</button>
             <table id="data-table">
                 <thead>
                     <tr>
                         <th>Descrição</th>
                         <th>Valor</th>
                         <th>Data</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -53,23 +55,58 @@
                         <td class="description">Luz</td>
                         <td class="expense">- R$ 500,00</td>
                         <td class="date">23/01/2021</td>
+                        <td class="delete">
+                            <a href="#">
+                                <img src="./img/delete.png" alt="Remover transação">
+                            </a>
+                        </td>
                     </tr>
                     <tr>
                         <td class="description">Criação de WebSite</td>
                         <td class="income">R$ 5.000,00</td>
                         <td class="date">24/01/2021</td>
+                        <td>
+                            <a href="#">
+                                <img src="./img/delete.png" alt="Remover transação">
+                            </a>
+                        </td>
                     </tr>
                     <tr>
                         <td class="description">Aluguel</td>
                         <td class="expense">- R$ 1.500,00</td>
                         <td class="date">26/01/2021</td>
+                        <td>
+                            <a href="">
+                                <img src="./img//delete.png" alt="Remover transação">
+                            </a>
+                        </td>
                     </tr>
                 </tbody>
             </table>
         </section>
     </main>
+    <div class="modal-overlay">
+        <div class="modal">
+            <div id="form">
+                <h2>Nova Transação</h2>
+                <form action="" class="formulario">
+                    <label for="description" class="sr-only">Descrição</label>
+                    <input type="text" id="description" name="description" placeholder="Descrição">
+                    <label for="amount" class="sr-only"></label>
+                    <input type="number" step="0.01" id="amount" name="amount" placeholder="0,00">
+                    <small>Use o sinal - (negativo) para despesas e , (virgula) para casas decimais</small>
+                    <label for="date" class="sr-only">Data</label>
+                    <input type="date" id="date" name="date">
+                    <button class="cancel" onclick="Model.close()">Cancelar</button>
+                    <button class="confirm" onclick="salvar()">Salvar</button>
+                </form>
+            </div>
+        </div>
+    </div>
     <footer>
         <p>@Hortência Côrtes</p>
     </footer>
+
+    <script src="./script.js"></script>
 </body>
 </html>
