--- a/index.html
+++ b/index.html
@@ -1,82 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>dev.finance$</title>
+    
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400&family=Poppins:wght@100;300;400;600&display=swap" rel="stylesheet">
+    
+    <script src="https://unpkg.com/feather-icons"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1 id="logo">dev.finance<small style="color: rgb(103, 165, 83);">$</small></h1>
+        <h1>dev.finance<span>$</span></h1>
     </header>
     <main class="container">
-        <section id="balance">
-            <h2 class="sr-only">Balanço</h2>
+        <section class="cards-content">
             <div class="card">
                 <h3>
-                    <span>Entradas</span>
-                    <img src="./img/entrada.png" alt="Imagem de entrada">
-                </h3>  
-                <p id="incomeDisplay">R$ 0,00</p>
+                    Entradas
+                    <i data-feather="arrow-up-circle" class="green"></i>
+                </h3>
+                <p id="incomes">R$ 0,00</p>
             </div>
             <div class="card">
                 <h3>
-                    <span>Saídas</span>
-                    <img src="./img/saida.png" alt="Imagem de saída">
+                    Saídas
+                    <i data-feather="arrow-down-circle" class="red"></i>
                 </h3>
-                <p id="expenseDisplay">R$ 0,00</p>
+                <p id="expenses">R$ 0,00</p>
             </div>
-            <div class="card">
+            <div class="card total">
                 <h3>
-                    <span>Total</span>
-                    <img src="./img/total.png" alt="">
+                    Total
+                    <i class="white" data-feather="dollar-sign"></i>
                 </h3>
-                <p id="totalDisplay">R$ 0,00</p>
+                <p id="total">R$ 0,00</p>
             </div>
         </section>
-        <section id="transaction">
-            <h2 class="sr-only">Transações</h2>
-            <button class="new" onclick="Modal.open()">+ Nova Transação</button>
+        <section class="transactions">
+            <button id="new-transaction">+ Nova Transação</button>
             <table id="data-table">
                 <thead>
                     <tr>
-                        <th>Descrição</th>
-                        <th>Valor</th>
-                        <th>Data</th>
-                        <th></th>
+                        <th id="thDescription">
+                            <p class="th">
+                                Descrição
+                                <i data-feather="chevron-down"></i>
+                            </p>
+                        </th>
+                        <th id="thAmount">
+                            <p class="th">
+                                Valor
+                                <i data-feather="chevron-down"></i>
+                            </p>
+                        </th>
+                        <th id="thDate">
+                            <p class="th">
+                                Data
+                                <i data-feather="chevron-down"></i>
+                            </p>
+                        </th>
+                        <th class="th"></th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody>      
                 </tbody>
             </table>
         </section>
     </main>
     <div class="modal-overlay">
         <div class="modal">
-            <div id="form">
-                <h2>Nova Transação</h2>
                 <form action="" class="formulario" onsubmit="Form.submit(event)">
-                    <label for="description" class="sr-only">Descrição</label>
-                    <input type="text" id="description" name="description" placeholder="Descrição">
-                    <label for="amount" class="sr-only"></label>
-                    <input type="number" step="0.01" id="amount" name="amount" placeholder="0,00">
-                    <small>Use o sinal - (negativo) para despesas e , (virgula) para casas decimais</small>
-                    <label for="date" class="sr-only">Data</label>
-                    <input type="date" id="date" name="date">
-                    <button class="cancel" onclick="Modal.close()">Cancelar</button>
-                    <button class="confirm" >Salvar</button>
+                    <h2>Nova Transação</h2>
+                    <div class="typeTransactions">
+                        <div class="type">
+                            <input type="radio" name="typeTransaction" id="typeExpenses">
+                            <label for="typeExpenses" class="typeExpenses">Saída
+                                <i data-feather="arrow-down-circle" class="red"></i>
+                            </label>
+                        </div>
+                        <div class="type">
+                            <input type="radio" name="typeTransaction" id="typeIncomes">
+                            <label for="typeIncomes" class="typeIncomes green">Entrada
+                                <i data-feather="arrow-up-circle" class="green"></i>
+                            </label>
+                        </div>
+                    </div>
+                    <input class="input incomes-bg" type="text" id="description" placeholder="Descrição">
+                    <input class="input incomes-bg" type="number" id="amount" placeholder="0,00" step="0.1">
+                    <p>Use o sinal - (negativo) para despesas e , (virgula) para casas decimais</p>
+                    <input class="input incomes-bg" type="date" id="date">
+                    <div class="form-buttons">
+                        <button class="cancel">Cancelar</button>
+                        <button class="confirm" onclick="Form.submit(event)">Salvar</button>
+                    </div>
                 </form>
-            </div>
         </div>
     </div>
-    <footer class="footer">
+    <footer>                              
         <p>@Hortência Côrtes</p>
     </footer>
-
     <script src="./script.js"></script>
 </body>
 </html>
