--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="typeTransactions">
           <div class="type">
             <input type="radio" name="typeTransaction" id="typeExpenses">
-            <label for="typeExpenses" class="typeExpenses">Saída
+            <label for="typeExpenses" class="typeExpenses red">Saída
               <i data-feather="arrow-down-circle" class="red"></i>
             </label>
           </div>
@@ -101,7 +101,7 @@
         <input class="input incomes-bg" type="date" id="date">
         <div class="form-buttons">
           <button class="cancel">Cancelar</button>
-          <button class="confirm" onclick="Form.submit(event)">Salvar</button>
+          <button class="confirm">Salvar</button>
         </div>
       </form>
     </div>
@@ -109,7 +109,7 @@
   <footer>
     <p>@Hortência Côrtes</p>
   </footer>
-  <script src="./script.js"></script>
+  <script src="./script.js" type="module"></script>
 </body>
 
 </html>
