fix the negative values

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="typeTransactions">
           <div class="type">
             <input type="radio" name="typeTransaction" id="typeExpenses">
-            <label for="typeExpenses" class="typeExpenses red">Saída
+            <label for="typeExpenses" class="typeExpenses">Saída
               <i data-feather="arrow-down-circle" class="red"></i>
             </label>
           </div>
