--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
         </div>
         <input class="input incomes-bg" type="text" id="description" placeholder="Descrição">
-        <input class="input incomes-bg" type="number" id="amount" placeholder="0,00" step="0.1">
+        <input class="input incomes-bg" id="amount" placeholder="0,00">
         <p>Use o sinal - (negativo) para despesas e , (virgula) para casas decimais</p>
         <input class="input incomes-bg" type="date" id="date">
         <div class="form-buttons">
